; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mmc/host/extr_sdhci-pci.c_jmicron_remove_slot.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mmc/host/extr_sdhci-pci.c_jmicron_remove_slot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sdhci_pci_slot = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64 }

@PCI_DEVICE_ID_JMICRON_JMB38X_MMC = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sdhci_pci_slot*, i32)* @jmicron_remove_slot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @jmicron_remove_slot(%struct.sdhci_pci_slot* %0, i32 %1) #0 {
  %3 = alloca %struct.sdhci_pci_slot*, align 8
  %4 = alloca i32, align 4
  store %struct.sdhci_pci_slot* %0, %struct.sdhci_pci_slot** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %2
  br label %23

8:                                                ; preds = %2
  %9 = load %struct.sdhci_pci_slot*, %struct.sdhci_pci_slot** %3, align 8
  %10 = getelementptr inbounds %struct.sdhci_pci_slot, %struct.sdhci_pci_slot* %9, i32 0, i32 1
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @PCI_DEVICE_ID_JMICRON_JMB38X_MMC, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %23

18:                                               ; preds = %8
  %19 = load %struct.sdhci_pci_slot*, %struct.sdhci_pci_slot** %3, align 8
  %20 = getelementptr inbounds %struct.sdhci_pci_slot, %struct.sdhci_pci_slot* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = call i32 @jmicron_enable_mmc(i32 %21, i32 0)
  br label %23

23:                                               ; preds = %7, %18, %8
  ret void
}

declare dso_local i32 @jmicron_enable_mmc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
